Playback stability fixes, Android Auto implementation, initial Download implementation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,6 +74,11 @@
     <string name="search_loading">Searching...</string>
     <string name="search_empty_query">Enter a search term to find music</string>
     <string name="search_no_connection">Connect to server to search</string>
+    <string name="offline_mode_active">Offline Mode - Showing downloaded content only</string>
+    <string name="offline_search_active">Offline - Searching downloaded content</string>
+    <string name="offline_feature_unavailable">This feature is unavailable in offline mode</string>
+    <string name="no_downloaded_content">No downloaded content available</string>
+    <string name="playing_from_download">Playing from download</string>
     <string name="content_desc_clear_search">Clear search</string>
     <string name="content_desc_nav_home">Navigate to Home</string>
     <string name="content_desc_nav_albums">Navigate to Albums</string>
@@ -106,6 +111,10 @@
     <string name="artists_count">Artists (%1$d)</string>
     <string name="album_detail_title">Album Details</string>
     <string name="album_detail_play">Play Album</string>
+    <string name="album_detail_download">Download Album</string>
+    <string name="album_detail_remove_download">Remove Download</string>
+    <string name="album_download_confirm_remove_title">Remove album download?</string>
+    <string name="album_download_confirm_remove_message">This will delete all downloaded tracks for this album from your device.</string>
     <string name="album_detail_tracks">Tracks</string>
     <string name="album_detail_loading_tracks">Loading tracks...</string>
     <string name="album_detail_no_tracks">No tracks available</string>
@@ -145,6 +154,10 @@
     <string name="playlists_create_error">Unable to create playlist</string>
     <string name="playlist_detail_title">Playlist Details</string>
     <string name="playlist_detail_play">Play Playlist</string>
+    <string name="playlist_detail_download">Download Playlist</string>
+    <string name="playlist_detail_remove_download">Remove Download</string>
+    <string name="playlist_download_confirm_remove_title">Remove playlist download?</string>
+    <string name="playlist_download_confirm_remove_message">This will delete all downloaded tracks for this playlist from your device.</string>
     <string name="playlist_detail_tracks">Tracks</string>
     <string name="playlist_detail_loading_tracks">Loading tracks...</string>
     <string name="playlist_detail_no_tracks">No tracks in this playlist</string>
@@ -169,13 +182,26 @@
     <string name="playlist_rename_empty_name">Playlist name cannot be empty</string>
     <string name="playlist_rename_same_name">Playlist name is unchanged</string>
     <string name="track_action_play">Play</string>
+    <string name="track_action_download">Download</string>
     <string name="track_action_add_to_playlist">Add to Playlist</string>
     <string name="track_action_remove_from_playlist">Remove from Playlist</string>
     <string name="track_remove_success">Removed track from playlist</string>
     <string name="track_remove_error">Unable to remove track from playlist</string>
     <string name="track_add_success">Added track to playlist</string>
     <string name="track_add_error">Unable to add track to playlist</string>
+    <string name="track_download_success">Track download started</string>
+    <string name="track_download_error">Unable to start download</string>
+    <string name="album_download_success">Album download started</string>
+    <string name="album_download_error">Unable to start album download</string>
+    <string name="album_download_removed">Album download removed</string>
+    <string name="album_download_remove_error">Unable to remove album download</string>
+    <string name="playlist_download_success">Playlist download started</string>
+    <string name="playlist_download_error">Unable to start playlist download</string>
+    <string name="playlist_download_removed">Playlist download removed</string>
+    <string name="playlist_download_remove_error">Unable to remove playlist download</string>
     <string name="content_desc_playlist_artwork">Playlist artwork</string>
+    <string name="content_desc_track_downloaded">Track downloaded</string>
+    <string name="content_desc_track_downloading">Track downloading</string>
     <string name="content_desc_create_playlist">Create playlist</string>
     <string name="now_playing_title">Now Playing</string>
     <string name="now_playing_empty">No track playing</string>
@@ -189,4 +215,34 @@
     <string name="content_desc_mini_player_artwork">Mini player artwork</string>
     <string name="content_desc_open_now_playing">Open Now Playing</string>
     <string name="playback_time_format">%1$d:%2$02d</string>
+    <string name="downloads_title">Downloads</string>
+    <string name="downloads_in_progress">In Progress</string>
+    <string name="downloads_completed">Downloaded</string>
+    <string name="downloads_empty">No downloads</string>
+    <string name="downloads_empty_message">Downloaded content will appear here</string>
+    <string name="downloads_clear_all">Clear All Downloads</string>
+    <string name="downloads_clear_confirm_title">Clear all downloads?</string>
+    <string name="downloads_clear_confirm_message">This will remove all downloaded files from your device.</string>
+    <string name="downloads_status_pending">Pending</string>
+    <string name="downloads_status_in_progress">Downloading</string>
+    <string name="downloads_status_paused">Paused</string>
+    <string name="downloads_speed_kbps">%1$.1f Kbps</string>
+    <string name="downloads_speed_mbps">%1$.1f Mbps</string>
+    <string name="downloads_section_playlists">Playlists</string>
+    <string name="downloads_section_albums">Albums</string>
+    <string name="downloads_section_tracks">Individual Tracks</string>
+    <string name="content_desc_download_icon">Downloads</string>
+    <string name="content_desc_download_progress">Download progress</string>
+    <string name="action_cancel_download">Cancel</string>
+    <string name="action_pause_download">Pause</string>
+    <string name="action_resume_download">Resume</string>
+    <string name="android_auto_root_title">Harmonixia</string>
+    <string name="android_auto_albums_category">Albums</string>
+    <string name="android_auto_artists_category">Artists</string>
+    <string name="android_auto_playlists_category">Playlists</string>
+    <string name="android_auto_downloads_category">Downloads</string>
+    <string name="android_auto_downloaded_albums">Downloaded Albums</string>
+    <string name="android_auto_downloaded_playlists">Downloaded Playlists</string>
+    <string name="android_auto_downloaded_tracks">Downloaded Tracks</string>
+    <string name="android_auto_offline_mode">Offline Mode</string>
 </resources>
