Player selection now implemented, and other little fixes, but there are lots of performance issues to address

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,13 +35,27 @@
     <string name="content_desc_local_media_folder">Local media folder path</string>
     <string name="label_server_url">Server URL</string>
     <string name="label_access_token">Access Token</string>
+    <string name="label_auth_method_token">Token</string>
+    <string name="label_auth_method_username_password">Username/Password</string>
+    <string name="label_username">Username</string>
+    <string name="label_password">Password</string>
     <string name="placeholder_server_url">http://192.168.1.29:8095</string>
     <string name="placeholder_access_token_optional">Optional - leave blank if not required</string>
+    <string name="placeholder_username">Enter username</string>
+    <string name="placeholder_password">Enter password</string>
     <string name="action_connect">Connect</string>
     <string name="action_test_connection">Test Connection</string>
     <string name="action_save">Save</string>
     <string name="action_save_reconnect">Save &amp; Reconnect</string>
     <string name="action_back">Back</string>
+    <string name="player_selection_title">Select Player</string>
+    <string name="player_selection_this_device">This Device</string>
+    <string name="player_available">Available</string>
+    <string name="player_unavailable">Unavailable</string>
+    <string name="content_desc_player_icon">Player</string>
+    <string name="content_desc_speaker_icon">Speaker settings</string>
+    <string name="player_indicator_no_player">No Player Selected</string>
+    <string name="content_desc_player_indicator">Selected player indicator. Tap to change player.</string>
     <string name="action_disconnect">Disconnect</string>
     <string name="action_clear_settings">Clear Settings</string>
     <string name="status_connecting">Connecting...</string>
@@ -54,10 +68,15 @@
     <string name="help_onboarding">Enter your Music Assistant server address and optional access token</string>
     <string name="error_server_url_required">Server URL is required</string>
     <string name="error_invalid_url">Invalid URL format</string>
+    <string name="error_username_required">Username is required</string>
+    <string name="error_password_required">Password is required</string>
+    <string name="error_invalid_credentials">Invalid username or password</string>
+    <string name="error_login_failed">Login failed. Please try again.</string>
     <string name="error_connection_timeout">Connection timeout</string>
     <string name="label_current_server_url">Current Server URL</string>
     <string name="label_current_access_token">Current Access Token</string>
     <string name="section_connection_settings">Connection Settings</string>
+    <string name="section_authentication">Authentication</string>
     <string name="section_connection_status">Connection Status</string>
     <string name="label_optional_access_token">Optional</string>
     <string name="message_welcome">Harmonixia connects to your Music Assistant server to manage playback.</string>
@@ -68,8 +87,12 @@
     <string name="message_settings_saved">Settings saved</string>
     <string name="content_desc_server_icon">Server</string>
     <string name="content_desc_token_icon">Access token</string>
+    <string name="content_desc_username_icon">Username</string>
+    <string name="content_desc_password_icon">Password</string>
     <string name="content_desc_visibility_on">Show access token</string>
     <string name="content_desc_visibility_off">Hide access token</string>
+    <string name="content_desc_password_visibility_on">Show password</string>
+    <string name="content_desc_password_visibility_off">Hide password</string>
     <string name="content_desc_error_icon">Error</string>
     <string name="content_desc_success_icon">Success</string>
     <string name="content_desc_connection_status">Connection status</string>
